<resources>
    <string name="app_name">P1251_ViewPager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Events">Events</string>
    <string name="card_header">GlimPseln</string>
    <string name="location">1st Nagatinskiy pr-d, 10 building 1, Moscow, 115533</string>
    <string name="data">14.04.2022</string>
    <string name="the_expo">This error could be seen on Android Emulator/Device Version >= 6.0.This error could be irequest/response to a remote API that is not secure</string>
    <string name="ask_to_Join">Ask to Join</string>
    <string name="add">Add</string>
    <string name="joined">Joined</string>
    <string name="created">Created</string>

</resources>